syntax = "proto3";

option go_package = "github.com/NeverlandMJ/ToDo/todo-service/todopb";

package todopb;

service TodoService {
    rpc CreateTodo(RequestTodo) returns (ResponseTodo);
    rpc GetTodoByID(RequestTodoID) returns (ResponseTodo);
    rpc MarkAsDone(RequestMarkAsDone) returns (Empty);
    rpc DeleteTodoByID(RequestTodoID) returns (Empty);
    rpc GetAllTodos(RequestUserID) returns (ResponseAllTodos);
    rpc UpdateTodosBody(RequestUpdateTodosBody) returns (Empty);
    rpc UpdateTodosDeadline(RequestUpdateTodosDeadline) returns (Empty);
    rpc DeleteDoneTodos(RequestUserID) returns (Empty);
    rpc DeletePassedDeadline(RequestUserID) returns (Empty);
}   

message Empty {}

message RequestMarkAsDone {
    string user_id = 1;
    string todo_id = 2;
}

message RequestTodo {
    string user_id = 1;
    string body = 2;
    string deadline = 3;
}

message ResponseTodo {
    string id = 1;
    string userID = 2;
    string body = 3;
    string created_at = 4;
    string deadline = 5;
    bool is_done = 6;
}

message ResponseAllTodos {
    repeated ResponseTodo responseTodos = 1;
}

message RequestTodoID {
    string id = 1;
}

message RequestUserID {
    string id = 1;
}

message RequestUpdateTodosBody {
    string id = 1;
    string new_body = 2;
}

message RequestUpdateTodosDeadline {
    string id = 1;
    string new_deadline = 2;
}